--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 
     <!-- Producto 1 -->
     <div class="producto">
-      <img src="c:\Users\dell\Desktop\index alhiva\img\flo.png.jpg" alt="Té hormonal">
+      <img src="img\flo.png.jpg" alt="Té hormonal">
       <h3>Flo</h3>
       <div class="info">
         <p>FLO Apoyo a la salud ovárica - Equilibrio hormonal para mujeres, suplemento con DIM, Myo y D-Chiro inositol, ácido fólico - Apoya la ovulación saludable, regularidad del ciclo - 30 porciones.</p>
@@ -176,7 +176,7 @@
 
     <!-- Producto 2 -->
     <div class="producto">
-      <img src="c:\Users\dell\Desktop\index alhiva\img\meno.jpg.jpg" alt="Colágeno">
+      <img src="img\meno.jpg.jpg" alt="Colágeno">
       <h3>Meno</h3>
       <div class="info">
         <p>MENO Vitaminas para la menopausia – Suplemento de menopausia sin hormonas para mujeres – Cohosh negro y Ashwagandha KSM-66 – Ayuda a aliviar los sofocos, sudores nocturnos, cambios de humor.</p>
